--- a/user.cfg
+++ b/user.cfg
@@ -12,6 +12,7 @@ PAGE_OFFSET  = 65536
 FWBURNFLAGS = -b 2000000
 
 SDK_DEFAULT  = $(HOME)/esp8266/esp-open-sdk
+SDK = $(HOME)/esp8266/esp_nonos_sdk
 ESP_GCC_VERS = 4.8.5
 
 OPTS += -DICACHE_FLASH
